skill roll template - add attribute info and notes

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -669,6 +669,11 @@
             </div>
         </div>
         <div class="box character-skill-dice-box">
+<!--hidden skill attributes to be used as placeholder for currently selected skill-->
+            <input type="hidden" name="attr_skill_attribute_selected" value="" readonly />
+            <input type="hidden" name="attr_skill_bonus_misc_selected" value="" readonly />
+            <input type="hidden" name="attr_skill_only_selected" value="" readonly />
+            <input type="hidden" name="attr_skill_notes_selected" value="" readonly />
             <div class="box toggle-dice-only character-skills">
                 <div class="skills-grid" data-i18n-list="skills-list">
                     <span>
@@ -3052,6 +3057,22 @@
                 <div class="template-grid-item template-span-six scroll-text">{{spell-description}}</div>
             {{/spell-description}}
 
+<!--skills-->
+            <div class="template-grid-item template-span-six condensed">
+                {{#skill-base}}<span class="label" data-i18n="attr-abbr">Attr</span>:&nbsp;
+                {{skill-base}}{{/skill-base}}&nbsp;
+                {{#skill-skill}}<span class="label" data-i18n="skill">Skill</span>:&nbsp;
+                {{skill-skill}}{{/skill-skill}}&nbsp;
+                {{#skill-bonus-misc}}&nbsp;&#177;&nbsp;<span class="label" data-i18n="misc-abbr">Misc</span>:&nbsp;
+                {{skill-bonus-misc}}{{/skill-bonus-misc}}
+                {{#skill-notes}}
+                    <hr class="template-span-six" style="margin: 5px 10px 5px 10px;">
+                    <div class="template-grid-item template-span-six">
+                        <span><b>{{skill-notes}}</b></span>
+                    </div>
+                {{/skill-notes}}
+            </div>
+
             {{#free-text}}
                 <div class="template-grid-item template-span-six free-text scroll-text">
                     <span>{{free-text}}</span>
@@ -3062,10 +3083,10 @@
                 <div class="template-grid-item template-span-six template-footer">{{footer}}</div>
             {{/footer}}
 
-            {{#allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc}}
+            {{#allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc skill-base skill-skill skill-bonus-misc skill-notes}}
             <div class="template-grid-item template-span-half"><span>**{{key}}**:</span></div>
             <div class="template-grid-item template-span-2nd-half"><span>{{value}}</span></div>
-            {{/allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc}}
+            {{/allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc skill-base skill-skill skill-bonus-misc skill-notes}}
 
         </div>
     </div>
@@ -3606,7 +3627,7 @@ Object.keys(monster_attributes).forEach(skill_name => {
     
     const dicePoolButtons = (which) => {
         clog(`Change Detected: Dice Pool ${which} - button clicked`);
-        getAttrs([attributes[which], misc[which], getSkill(which), getSkillKey(which), getSkill(which) + '_artifact_die_eight', getSkill(which) + '_artifact_die_ocho', getSkill(which) + '_artifact_die_ten', getSkill(which) + '_artifact_die_twelve'], function (values) {
+        getAttrs([attributes[which], misc[which], getSkill(which), getSkillKey(which), getSkill(which) + '_artifact_die_eight', getSkill(which) + '_artifact_die_ocho', getSkill(which) + '_artifact_die_ten', getSkill(which) + '_artifact_die_twelve', getSkill(which) + '_notes'], function (values) {
             // attributes[which] returns the attribute; e.g attributes['Stealth'] gives 'agility_total'
             // getSkill(which) converts the skill name to a valid attribute string: getSkill('Animal Handling') gives 'animal_handling'
             const stat = int(values[attributes[which]]),
@@ -3616,23 +3637,31 @@ Object.keys(monster_attributes).forEach(skill_name => {
             artifact_die_eight = int(values[getSkill(which) + '_artifact_die_eight']),
             artifact_die_ocho = int(values[getSkill(which) + '_artifact_die_ocho']),
             artifact_die_ten = int(values[getSkill(which) + '_artifact_die_ten']),
-            artifact_die_twelve = int(values[getSkill(which) + '_artifact_die_twelve']);
+            artifact_die_twelve = int(values[getSkill(which) + '_artifact_die_twelve']),
+            skill_attribute_selected = stat > 0 ? stat : 0,
+            skill_bonus_misc_selected = miscStat,
+            skill_only_selected = int(values[getSkill(which)]),
+            skill_notes_selected = values[getSkill(which) + '_notes'];
             // used to set the proper translation key
             let whichKey = getTranslationByKey(getSkillKey(which));
     
             setAttrs({
                 attribute: stat > 0 ? stat : 0, // this is a Ternary Operator, it starts with a question (e.g. is stat > 0) 
                 // and if true, returns the bit after the ? and if false returns the bit after the :
-                // you can often replace simple if/then expressions with a single line ternary operator.    
-                skill: int(values[getSkill(which)]) + miscStat,
+                // you can often replace simple if/then expressions with a single line ternary operator.            
                 // uses the translation key
                 gear: 0,
+                skill: int(values[getSkill(which)]) + miscStat,
                 artifact_die_eight: artifact_die_eight,
                 artifact_die_ocho: artifact_die_ocho,
                 artifact_die_ten: artifact_die_ten,
                 artifact_die_twelve: artifact_die_twelve,
+                skill_attribute_selected: skill_attribute_selected,
+                skill_bonus_misc_selected: skill_bonus_misc_selected,
+                skill_only_selected: skill_only_selected,
+                skill_notes_selected: skill_notes_selected,
                 current_preset: whichKey,
-                include_with_roll: ""
+                include_with_roll: `{{skill-base=${skill_attribute_selected}}} {{skill-skill=${skill_only_selected}}} {{skill-bonus-misc=${skill_bonus_misc_selected}}} {{skill-notes=${skill_notes_selected}}}`
             });
         });
     };
