Set up Dice pips and tested on one system

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1496,31 +1496,31 @@
 
 				<div class="systemListMod1">Survey Sensor: </div>
 				<div class="systemListPips1">
-					<input type="radio" class="D10 ZeroDie" name="attr_SensorsSurveySensor" value="0" checked="checked" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsSurveySensor" value="1" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsSurveySensor" value="2" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsSurveySensor" value="3" /><span></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsSurveySensor" value="0" checked="checked" /><span class="inlinePips ZeroDie"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsSurveySensor" value="1" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsSurveySensor" value="2" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsSurveySensor" value="3" /><span class="inlinePips D10"></span>
 				</div>
 				<div class="systemListMod2">Depth Analyser:</div>
 				<div class="systemListPips2">
-					<input type="radio" class="D10 ZeroDie" name="attr_SensorsDepthAnalyser" value="0" checked="checked" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsDepthAnalyser" value="1" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsDepthAnalyser" value="2" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsDepthAnalyser" value="3" /><span></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsDepthAnalyser" value="0" checked="checked" /><span class="inlinePips ZeroDie"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsDepthAnalyser" value="1" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsDepthAnalyser" value="2" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsDepthAnalyser" value="3" /><span class="inlinePips D10"></span>
 				</div>
 				<div class="systemListMod3">Area Effect:</div>
 				<div class="systemListPips3">
-					<input type="radio" class="D10 ZeroDie" name="attr_SensorsAreaEffect" value="0" checked="checked" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsAreaEffect" value="1" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsAreaEffect" value="2" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsAreaEffect" value="3" /><span></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsAreaEffect" value="0" checked="checked" /><span class="inlinePips ZeroDie"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsAreaEffect" value="1" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsAreaEffect" value="2" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsAreaEffect" value="3" /><span class="inlinePips D10"></span>
 				</div>
 				<div class="systemListMod4">Range Compensator:</div>
 				<div class="systemListPips4">
-					<input type="radio" class="D10 ZeroDie" name="attr_SensorsRangeCompensator" value="0" checked="checked" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsRangeCompensator" value="1" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsRangeCompensator" value="2" /><span></span>
-					<input type="radio" class="D10" name="attr_SensorsRangeCompensator" value="3" /><span></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsRangeCompensator" value="0" checked="checked" /><span class="inlinePips ZeroDie"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsRangeCompensator" value="1" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsRangeCompensator" value="2" /><span class="inlinePips D10"></span>
+					<input type="radio" class="inlinePipCheckbox hideCheckbox" name="attr_SensorsRangeCompensator" value="3" /><span class="inlinePips D10"></span>
 				</div>
 			</div>
 			<!--Grav Drive-->
@@ -1797,9 +1797,9 @@
 			<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckboxSmall" value="active" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBaycapacityPips">
-			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="1" /><span class="inlineCapacityPips capacityPips"></span>
-			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="2" /><span class="inlineCapacityPips capacityPips"></span>
-			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="3" checked="checked" /><span class="inlineCapacityPips capacityPips"></span>
+			<input type="radio" class="hideCheckbox inlineCapacityCheckboxSmall" name="attr_tugReactor" value="1" /><span class="inlineCapacityPipsSmall capacityPips"></span>
+			<input type="radio" class="hideCheckbox inlineCapacityCheckboxSmall" name="attr_tugReactor" value="2" /><span class="inlineCapacityPipsSmall capacityPips"></span>
+			<input type="radio" class="hideCheckbox inlineCapacityCheckboxSmall" name="attr_tugReactor" value="3" checked="checked" /><span class="inlineCapacityPipsSmall capacityPips"></span>
 		</div>
 		<div class="launchBayChargeTitle">Charge:</div>
 		<div class="launchBayChargeBox"><input type="number" name="attr_tugReactorCharge" min="0" max="3" class="tugReactorCharge" /></div>
