small layout adjustmets

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -20,7 +20,10 @@
         <span class="footer">2/29/20'</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
             <span>v1.63</span>
-            <li>working on stuff</li>
+            <li>Added a toggleable 2nd row to each skill.</li>
+            <li>Added Artifact dice, Misc Skill modifier, and Notes to each skill.</li>
+            <li>Updated the roll template for Skill rolls.</li>
+            <li>Added Misc Skill modifier to monster strength-based skills.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
@@ -3067,8 +3070,8 @@
                 {{skill-bonus-misc}}{{/skill-bonus-misc}}
                 {{#skill-notes}}
                     <hr class="template-span-six" style="margin: 5px 10px 5px 10px;">
-                    <div class="template-grid-item template-span-six">
-                        <span><b>{{skill-notes}}</b></span>
+                    <div class="template-grid-item template-span-six scroll-text">
+                        <span>{{skill-notes}}</span>
                     </div>
                 {{/skill-notes}}
             </div>
