--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -77,7 +77,7 @@
 				<input type="number" name="attr_Na" value="1" min="1" class="sheet-number-20" />
 			</div>
 			<div class="sheet-float sheet-formular">
-				<button type="roll" class="sheet-small-button" name="roll_FeRoll" value="@{abilityroll} versucht sich in Fernkampf [[(@{Fe}})d10 + ?{Modifier?|0]]">Fernkampf</button>
+				<button type="roll" class="sheet-small-button" name="roll_FeRoll" value="@{abilityroll} versucht sich in Fernkampf [[(@{Fe}})d10 + ?{Modifier?|0}]]">Fernkampf</button>
 				<input type="number" name="attr_Fe" value="1" min="1" class="sheet-number-20" />
 			</div>
 			<div class="sheet-float sheet-formular">
