--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1387,7 +1387,6 @@
 </div>
 
 
-
 <!-- ------------------- -->
 <!--    SHIP PAGE        -->
 <!-- ------------------- -->
@@ -1587,6 +1586,57 @@
 		</div>
 	</div>
 	<!--Ship Amenities-->
+	<div class="row275 column570 amenitiesWidget">
+		<h2 class="subtitlesNarrow">Amenities</h2>
+		<div class="amenities">
+			<div class="amenityList1">Artery</div>
+			<div class="amenityDetails1">Life support arterial system</div>
+			<div class="amenityList2">Bridge</div>
+			<div class="amenityDetails2">Command and control</div>
+			<div class="amenityList3">Galley</div>
+			<div class="amenityDetails3">Kitchen and dining room</div>
+			<div class="amenityList4">Lounge</div>
+			<div class="amenityDetails4">Recreational space for rest and relaxation</div>
+			<div class="amenityList5">Quarters</div>
+			<div class="amenityDetails5">Sleeps six</div>
+			<div class="amenityList6">Cargo Hold</div>
+			<div class="amenityDetails6">Two-story cargo space;<input type="number" min="0" max="660" value="660" name="attr_CargoTonnage">tonnes</div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent01" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails01" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent02" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails02" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent03" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails03" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent04" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails04" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent05" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails05" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent06" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails06" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent07" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails07" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent08" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails08" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent09" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails09" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent10" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails10" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent11" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails11" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent12" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails12" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent13" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails13" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent14" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails14" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent15" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails15" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent16" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails16" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponent17" class="full"></div>
+			<div class="amenityComponent"><input type="text" name="attr_amenityComponentDetails17" class="full"></div>
+		</div>
+	</div>
 	<!--Ship Modules-->
 	<div class="row650 moduleWidget">
 		<h2 class="subtitlesFull">Ship Modules</h2>
@@ -1811,7 +1861,8 @@
 		</div>
 		<div class="launchBayTrailerCost8">18</div>
 		<div class="launchBayTrailerType8">Fighter</div>
-		<div class="launchBayTrailerDetails8">Orbital Injectors: +2, Kenetic Deflector, Energy Dissipater; Pulse Array&mdash;Space Target: 2, Surface Targetor: 3</div>
+		<div class="launchBayTrailerDetails8">Orbital Injectors: +2, Kenetic Deflector, Energy Dissipater</div>
+		<div class="launchBayTrailerDetails9">Pulse Array&mdash;Space Target: 2, Surface Targetor: 3</div>
 		<div class="launchBayTrailerArmour8">
 			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour3Condition" value="1" /><span class="inlineArmour armour"></span>
 			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
